DB Support and endpoint to save static PDFs
