# src/pkg/domain/usecase/usecase.go
@@ -22,6 +22,7 @@ type Repository interface {
 	GetEmailTemplateByName(name string) (*domain.Template, error)
 	AddEmailTemplate(name string, templateStr string, isMJML bool) error
 	// PDF
+	SavePDF(fileName string, base64Content string) error
 	GetPDFTemplateByName(name string) (*domain.Template, error)
 	AddPDFTemplate(name string, typstString string) error
 	// SMS
